Fixed hovers and scrolling on mobiles, fixed selection absence of the nimbus tiles when its column is solved

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   background-color: #2e3339;
   width: 100vw;
   height: 100vh;
   display: flex;
+  position: fixed;
   align-items: center;
   justify-content: center;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   font-family: 'Open Sans', sans-serif;
 }
